              triangulation arguments by const reference (not pointer), and
              return a std::unique_ptr instead of a raw pointer.
              The old names are kept as deprecated aliases.
            - Added copy/move construction and copy/move assignment.
            - Added member and global swap() functions.
            - Changed BlockedSFS::isPluggedIBundle() to take no arguments,
              and instead return a std::optional<std::string>.
        Class BoolSet:
            - Almost everything in this class is now constexpr.
            - The class constants sNone, sTrue, sFalse, sBoth are deprecated.
              Just use BoolSet(), true, false, or BoolSet(true, true).
            - Most routines that took a (const BoolSet&) now just take a
              BoolSet by value.
            - New routines stringCode() and setStringCode().
            - Routine setByteCode() now detects invalid codes, and
              returns a boolean accordingly.
        Class BoundaryComponent<dim>:
            - Routines faces(), facets(), and the aliases vertices(), edges(),
              etc. no longer return a const reference to a std::vector, but
              instead return a lightweight ListView object by value.
              C++ users should just use auto, and Python users are unaffected.
              See the analagous Triangulation<dim> changes for further details.
            - Routine build() now returns by const reference (not const
              pointer), and behaves correctly in the presence of pinched faces
              (which only appear in invalid triangulations).
            - Simplified the class hierarchy; BoundaryComponentFaceInterface,
              BoundaryComponentStorage, BoundaryComponentFaceStorage,
              WeakFaceList and WeakFaceListSuite are all gone.
            - New compile-time constant dimension.
            - Dimension 3 is no longer specialised: all dimensions now share
              the same generic code.