@@ -493,6 +493,56 @@ class SatRegion : public Output<SatRegion> {
             size_t which) const;
 
         /**
+         * Determines whether this and the given object represent the
+         * same combinatorial presentation of a saturated region.
+         *
+         * Specifically, in order to compare as equal, two saturated
+         * regions must be formed from saturated blocks with the same
+         * combinatorial parameters (as returned by the SatBlock
+         * comparison operators), and these blocks must be presented in
+         * the same order with the same horizontal/vertical reflections
+         * and joined together in the same way.
+         *
+         * Like the comparison operators for most parameterised subclasses
+         * of StandardTriangulation, it does not matter how the constituent
+         * tetrahedra and/or their vertices are numbered.  However, this
+         * test is more specific than combinatorial isomorphism of the
+         * underlying subcomplex of the triangulation, since it does not
+         * account for the many symmetries in how the same saturated
+         * region can be presented.
+         *
+         * @param other the saturated region to compare with this.
+         * @return \c true if and only if this and the given object represent
+         * the same combinatorial presentation of a saturated region.
+         */
+        bool operator == (const SatRegion& other) const;
+
+        /**
+         * Determines whether this and the given object represent
+         * diffrerent combinatorial presentations of a saturated region.
+         *
+         * Specifically, in order to compare as equal, two saturated
+         * regions must be formed from saturated blocks with the same
+         * combinatorial parameters (as returned by the SatBlock
+         * comparison operators), and these blocks must be presented in
+         * the same order with the same horizontal/vertical reflections
+         * and joined together in the same way.
+         *
+         * Like the comparison operators for most parameterised subclasses
+         * of StandardTriangulation, it does not matter how the constituent
+         * tetrahedra and/or their vertices are numbered.  However, this
+         * test is more specific than combinatorial isomorphism of the
+         * underlying subcomplex of the triangulation, since it does not
+         * account for the many symmetries in how the same saturated
+         * region can be presented.
+         *
+         * @param other the saturated region to compare with this.
+         * @return \c true if and only if this and the given object represent
+         * different combinatorial presentations of a saturated region.
+         */
+        bool operator != (const SatRegion& other) const;
+
+        /**
          * Returns details of the Seifert fibred space represented by
          * this region.
          *
@@ -962,6 +1012,10 @@ inline size_t SatRegion::countBoundaryAnnuli() const {
 
 inline size_t SatRegion::numberOfBoundaryAnnuli() const {
     return nBdryAnnuli_;
+}
+
+inline bool SatRegion::operator != (const SatRegion& other) const {
+    return ! ((*this) == other);
 }
 
 inline std::string SatRegion::blockAbbrs(bool tex) const {
