@@ -53,6 +53,7 @@ void addBlockedSFSLoop(pybind11::module_& m) {
             &BlockedSFSLoop::recognise)
     ;
     regina::python::add_output(c);
+    regina::python::add_eq_operators(c);
 
     m.def("swap", (void(*)(BlockedSFSLoop&, BlockedSFSLoop&))(regina::swap));
 }
